--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 .idea
 
 app/__pycache__/
+app/migrations/versions/__pycache__/
+app/migrations/__pycache__/
+app/db/__pycache__/
+app/db/models/__pycache__/
+app/handlers/__pycache__/
+app/myenv/
 
 */__pycache__/
 */*/__pycache__/
