--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ app/db/__pycache__/
 app/db/models/__pycache__/
 app/handlers/__pycache__/
 app/myenv/
+app/service/__pycache__/
 
 */__pycache__/
 */*/__pycache__/
