--- a/front/package.json
+++ b/front/package.json
@@ -33,23 +33,34 @@
     "test": "exit 0"
   },
   "dependencies": {
+    "@gravity-ui/date-components": "^2.4.0",
+    "@gravity-ui/date-utils": "^2.5.3",
     "@gravity-ui/icons": "^2.6.0",
     "@gravity-ui/navigation": "^2.14.0",
     "@gravity-ui/uikit": "^6.13.0",
     "@svgr/rollup": "^8.1.0",
+    "@tanstack/react-query": "^5.45.0",
+    "@tanstack/react-query-devtools": "^5.45.0",
+    "axios": "^1.7.2",
     "bem-cn-lite": "^4.1.0",
     "classnames": "^2.5.1",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.4",
+    "react-final-form": "^6.5.9",
+    "react-final-form-arrays": "^3.1.4",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@gravity-ui/browserslist-config": "^4.1.0",
+    "@gravity-ui/dynamic-forms": "^4.4.0",
     "@gravity-ui/eslint-config": "^3.1.1",
     "@gravity-ui/prettier-config": "^1.1.0",
     "@gravity-ui/stylelint-config": "^4.0.0",
     "@gravity-ui/tsconfig": "^1.0.0",
+    "@tanstack/eslint-plugin-query": "^5.43.1",
+    "@types/lodash": "^4.17.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "6.9.0",
