--- a/front/package.json
+++ b/front/package.json
@@ -50,6 +50,7 @@
     "react-final-form": "^6.5.9",
     "react-final-form-arrays": "^3.1.4",
     "react-router-dom": "^6.23.1",
+    "react-use-cookie": "^1.6.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prefer-arrow-functions": "^3.3.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "sass": "^1.68.0",
