--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,9 @@ services:
       - "8000:8000"
     depends_on:
       - db
+
+  front:
+    build: ./front
+    container_name: front
+    ports:
+      - "3000:3000"
