--- a/front/package.json
+++ b/front/package.json
@@ -24,8 +24,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "build": "vite build",
+    "start": "vite preview",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
     "lint:styles": "stylelint '{styles,src}/**/*.scss'",
     "lint:prettier": "prettier --check '**/*.md'",
@@ -38,9 +38,9 @@
     "@gravity-ui/icons": "^2.6.0",
     "@gravity-ui/navigation": "^2.14.0",
     "@gravity-ui/uikit": "^6.13.0",
-    "@svgr/rollup": "^8.1.0",
     "@tanstack/react-query": "^5.45.0",
     "@tanstack/react-query-devtools": "^5.45.0",
+    "@tanstack/react-store": "^0.4.1",
     "axios": "^1.7.2",
     "bem-cn-lite": "^4.1.0",
     "classnames": "^2.5.1",
