--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,11 +1,13 @@
-FROM node:18
+FROM node:18.18.2
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY ./package.json ./
 
 RUN npm install
 
 COPY . .
 
-CMD ["npm", "start"]
+# RUN npm run build
+
+CMD ["npm", "run", "dev"]
