--- a/front/package.json
+++ b/front/package.json
@@ -52,7 +52,7 @@
     "react-router-dom": "^6.23.1",
     "react-use-cookie": "^1.6.1",
     "sort-by": "^1.2.0"
-  },
+},
   "devDependencies": {
     "@gravity-ui/browserslist-config": "^4.1.0",
     "@gravity-ui/dynamic-forms": "^4.4.0",
@@ -81,8 +81,8 @@
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "vite": "^5.3.1"
   },
   "browserslist": [
     "extends @gravity-ui/browserslist-config"
