--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,10 @@ services:
     depends_on:
       - db
 
-  front:
-    build: ./front
-    container_name: front
-    volumes:
-      - ./front:/app
-    ports:
-      - "3000:3000"
+#  front:
+#    build: ./front
+#    container_name: front
+#    volumes:
+#      - ./front:/app
+#    ports:
+#      - "3000:3000"
