--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Gravity UI – Vite Example",
+  "name": "STARCRACK – Vite Example",
   "icons": [
     {
       "src": "favicon.ico",
